initial rework